full project done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         </nav>
         <!-- banner section code  -->
-        <section class="banner_section">
+        <section class="banner_container">
             <div class="banner_title">
                 <h1><span>Digital</span> Agency You <br> Can Rely Upon !</h1> <br>
                 <p> pHymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt, semper metus, nibh adipisci
@@ -34,6 +34,85 @@
             </div>
         </section>
     </header>
+    <main>
+        <section class="services_container">
+            <div class="services_title">
+                <button class="btn banner_btn_1">Hire us now </button> <br> <br>
+                <h1>Services We Can Help You With !</h1> <br>
+                <p>Vero id posuere tempus aspernatur quaerat mollis voluptatum <br> eveniet porro viverra libero
+                    habitasse porro fames quos pharetra <br> diam cupidatat ligula! Netus! Quos dignissi mos</p> <br>
+                <ol type="1">
+                    <li>Nobis ridiculus cupiditate egestas commodi.</li>
+                    <li>Ipsum dui curabitur dapibuish mollitia.</li>
+                </ol> <br>
+                <div class="author">
+                    <div class="author_img">
+                        <img src="./asset/image/author.jpg" alt="">
+                        <div>
+                            <h4>George Smith</h4>
+                            <h4>CEO, Director</h4>
+                        </div>
+                    </div>
+                    <button class="btn banner_btn_2">More </button>
+                </div>
+            </div>
+            <div>
+                <div class="services_img_container">
+                    <div class="services_img_box">
+                        <img src="./asset/icons/bar-chart.png" alt=""> <br>
+                        <h2>Web Development</h2>
+                    </div>
+                    <div class="services_img_box">
+                        <img src="./asset/icons/digital-marketing.png" alt=""> <br>
+                        <h2>Digital Marketing</h2>
+                    </div>
+                </div>
+                <div class="services_img_container">
+                    <div class="services_img_box">
+                        <img src="./asset/icons/phone-call.png" alt=""> <br>
+                        <h2>Phone Call</h2>
+                    </div>
+                    <div class="services_img_box">
+                        <img src="./asset/icons/startup.png" alt=""> <br>
+                        <h2>Start Up</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- red box section  -->
+        <section class="red_box_container">
+            <img src="./asset/icons/phone-call.png" alt="">
+            <h3>GET A FREE <br> CONSULTATION <br>987 233 0000
+            </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus dolorum earum recusandae eaque
+                nihil <br> hic obcaecati soluta officia? Minus, illum?</p>
+            <button>Make an appointment</button>
+        </section>
+    </main>
+    <footer>
+        <h1> <span>Blog </span> & News From Us!</h1>
+        <div class="footer_container">
+            <div class="">
+                <img src="./asset/image/blog-1.jpg" alt="">
+                <h3>Maxime rhoncus aliquet sint eu accusantium illum.</h3>
+                <p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis,
+                    nascetur?.....</p>
+            </div>
+            <div class="">
+                <img src="./asset/image/blog-2.jpg" alt="">
+                <h3>Maxime rhoncus aliquet sint eu accusantium illum.</h3>
+                <p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis,
+                    nascetur?.....</p>
+            </div>
+            <div class="">
+                <img src="./asset/image/blog-3.jpg" alt="">
+                <h3>Maxime rhoncus aliquet sint eu accusantium illum.</h3>
+                <p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis,
+                    nascetur?.....</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
